--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,29 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Maven
+log/
+target/
+
+
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+/src/main/
+/target/
+#*.xml
+
+
+# IntelliJ
+.idea/
+.idea_modules/
+*.iml
+*.iws
+out
